add generated bundle in git for tracking

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "url": "https://github.com/gaplo917/js-playgroud"
   },
   "keywords": [
-    "javascript",
+    "javascript"
   ],
   "author": "",
   "license": "MIT",
